# puzzcombinator-redux

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  restart-server.sh
examples/: crossword_demo-jgg.py  crossword_demo.py  mock_hunt.py  r4_demo.py
examples/artifacts/: showcase.py
examples/hunts/jgg_hunt/: hunt.py
examples/hunts/mock_hunt/: hunt.py
examples/mock_hunt/: hunt.py
examples/puzzles/: cipher_artifacts_demo.py  crossword_demo.py  r4_demo.py
examples/puzzles/cipher/: demo.py
examples/puzzles/crossword/: demo.py
examples/puzzles/r4/: demo.py
examples/puzzles/riddle/: demo.py
frontend/: ADDING-A-COMMAND.md  FRONTEND.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/design/: DESIGN.md
frontend/src/: App.tsx  HuntNode.tsx  adapt.ts  api.ts  index.css  theme.css
src/puzzcombinator/: __init__.py  errors.py
tests/: conftest.py  test_e2e.py
tests/app/: test_layout.py  test_server.py
tests/artifacts/: test_composite.py  test_export.py  test_image.py  test_svg.py  test_text.py
tests/core/: test_builder.py  test_graph.py  test_ordering.py
tests/puzzles/: test_base.py  test_cipher.py  test_crossword.py  test_image.py  test_r4.py  test_riddle.py
tests/rendering/: test_binder.py  test_export.py  test_fragment.py  test_presets.py
tests/serialization/: test_roundtrip.py  test_schema.py
tests/validation/: test_builtins.py  test_registry.py  test_serialize.py
tests/visualization/: test_defaults.py  test_layout.py  test_workspace.py
(+105 files in other folders)
